# shadow_tomgraphy

./: .gitignore  README.md  pyproject.toml
Shadow_Creation/: data_acquisition_shadow.py
src/: Classical_Shadow_Comparison.ipynb  CliffordAssist.py  CliffordClassicalShadows.py  Expectation Values of MG Model Observables.ipynb  MG_Model.py  OSCAR Zeromode Analysis.ipynb  PennylaneClassicalShadows.py  QPEClassicalShadow.py  QPEShadowAssist.py  QiskitClassicalShadows.py  ShadowAssist.py  Simulation.ipynb  main.py  qpe-obs.script  qpe_obs_main.py  shadow-qpe-main.py  shadow-qpe.script
src/OSCAR Zeromode Analysis/: OSCAR Zeromode Analysis.ipynb
src/OSCAR Zeromode Analysis/CSVs/: Aer_NonShadow_Results.csv  Aer_Shadow_Results.csv  FakeMontreal_NonShadow_Results.csv  FakeMontreal_Shadow_Results.csv
src/OSCAR Zeromode Analysis/Outputs/: SQ(FM)-2 Runs- [10000, 50000, 100000].out  SQ(FM)-3 Runs- [10000, 50000, 100000].out  SQ(FM)-[1000, 5000, 10000].out  SQ-[1000,5000,10000].out  SQ-[10000, 50000, 100000].out  Shadow-QPE-Sample Error.out  UNFINISHED SQ(FM)-[10000, 50000, 100000].out
src/Shadow-Majumdar Gosh/measurements/: Example_Observables_measurement.txt
src/observables/: Example_Observables.txt
src/predictions/: Example_Observables_prediction.txt
src/schemes/: Example_Observables_scheme.txt
