[tool.poetry]
name = "shadow-tomography"
version = "0.1.0"
description = ""
authors = ["Daniel Qenani"]
readme = "README.md"
packages = [{include = "shadow_tomography"}]

[tool.poetry.dependencies]
python = "3.11"
qiskit = "^0.39.3"
matplotlib = "^3.7.2"
pennylane = "^0.32.0"
qiskit-aer = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
